--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# ignore the following files
+coordinates.npy
+img.npy
+img_crop.npy
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
